Fixed spacing for the collection headings.
Fixed spacing for the collection headings.

--- a/products.css
+++ b/products.css
@@ -9,24 +9,12 @@ h1#collections{
 nav{
   list-style-type: none;
   text-decoration: none;
-  text-align: center;
   padding-bottom: 1.5em;
-
 }
 
 table#nav{
-  width: 33%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-tr{
-  text-align: center;
-}
-
-td{
-  text-align: center;
+  width: 50%;
+  margin: auto;
 }
 
 h1#rain{
@@ -57,6 +45,7 @@ h1#shine{
   text-decoration: none;
   color: rgb(51, 57, 195);
   font-size: 2.5em;
+  padding-right: .75em;
 }
 
 #link_sh{
@@ -69,6 +58,7 @@ h1#shine{
   text-decoration: none;
   color: rgb(21, 141, 144);
   font-size: 2.5em;
+  padding-right: .75em;
 }
 
 td{
